Capitalisation et. al

--- a/creating-campaign/membership/creatememprogram.mdx
+++ b/creating-campaign/membership/creatememprogram.mdx
@@ -9,7 +9,7 @@ title: 'Creating a Membership Program'
         [https://portal.moongate.id/events](https://portal.moongate.id/memberships)
         <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
     </Step>    
-    <Step title="Add Basic Membership Program Information">
+    <Step title="Add basic membership program information">
         Enter the title of the membership program, the URL, currency used to purchase membership, and information about your brand.
         <img src="/images/creating-campaign/membership/creating program/Basic Membership Info.webp"/>
         <Warning>
@@ -21,7 +21,7 @@ title: 'Creating a Membership Program'
             Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.
         </Tip>
     </Step>
-    <Step title="Add Membership Program Images, Description, and Links">
+    <Step title="Add membership program images, description, and links">
         Add a featured image, banner, and description of your membership program, as well as links to relevant social media accounts.
         <img src="/images/creating-campaign/membership/creating program/Add Membership Details.webp"/>
         <Tabs>
