--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -8,7 +8,7 @@ title: 'Implementing Membership Tiers'
     <Step title="Click 'Add Tier'">
         <img src="/images/creating-campaign/membership/creating tier/Add Tier Button Location.webp"/>
     </Step>
-    <Step title="Add Membership Tier Name/Type">
+    <Step title="Add membership tier name/type">
         Enter the name or tier (superfan, VIP, etc) for this membership type. Additional tiers can always be added to your membership program later.
         <img src="/images/creating-campaign/membership/creating tier/Add Tier Name.png"/>
         <Frame caption="Where customers will see the different tiers within the membership program">
@@ -18,7 +18,7 @@ title: 'Implementing Membership Tiers'
             Updates made to the "Membership Tier Name" field may not automatically appear on NFT marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed, manually refresh the NFT metadata on the respective marketplaces.
         </Warning>
     </Step>
-    <Step title="Add Membership Tier Image and Description">
+    <Step title="Add membership tier image and description">
         Upload an image and a brief description for this membership tier.
         <img src="/images/creating-campaign/membership/creating tier/Add Tier Img and Desc.png"/>
         <Tabs>
@@ -37,7 +37,7 @@ title: 'Implementing Membership Tiers'
             </Tab>
         </Tabs>
     </Step>
-    <Step title="Specify Membership Tier Price">
+    <Step title="Specify membership tier price">
         Enter the desired price for this membership tier.
             <img src="/images/creating-campaign/membership/creating tier/Add Tix Price.png"/>
         <Tip>
@@ -47,7 +47,7 @@ title: 'Implementing Membership Tiers'
             To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
         </Tip>
     </Step>
-    <Step title="Specify Advanced Options (Optional)">
+    <Step title="Specify advanced options (Optional)">
         If applicable, specify the maximum number of available memberships within this tier, as well as whether this tier should be invisible to users on the membership information page.
         <img src="/images/creating-campaign/membership/creating tier/Advance Toggle.png"/>
         <Info>
@@ -55,14 +55,14 @@ title: 'Implementing Membership Tiers'
         </Info>
         When you are ready, click "Save" to close the "Membership Tier" window, then click "Next."
     </Step>
-    <Step title="Add Questions (Optional)">
+    <Step title="Add questions (Optional)">
         <img src="/images/creating-campaign/membership/creating tier/Add Qs.gif"/>
         If desired, add questions to collect information from users who are joining the membership program. These questions will be shown to users during checkout.
         <img src="/images/creating-campaign/membership/creating tier/Qs.png"/>
         Responses can be viewed from the membership program's Sales tab, located in the membership program dashboard.
         <img src="/images/creating-campaign/membership/creating tier/Responses.gif"/>
     </Step>
-    <Step title="Specify Contract Settings and Payment Options">
+    <Step title="Specify contract settings and payment options">
         Choose a collection name and symbol for your membership program. The collection name will be used as the collection title when individual memberships are listed on marketplaces, and the symbol will be used.
         <img src="/images/creating-campaign/membership/creating tier/Contract Settings Empty.png"/>
         <Warning>
@@ -79,7 +79,7 @@ title: 'Implementing Membership Tiers'
         Select a payment option if applicable. Moongate supports both credit cards and crypto options. Please contact us if you will be collecting payment for your event.
         <img src="/images/creating-campaign/membership/creating tier/Payment Options.png"/>    
     </Step>
-    <Step title="Publish Your Event">
+    <Step title="Publish your event">
         Once you have finalized your membership program and tiering details, click "Publish" to launch your event.
         <img src="/images/creating-campaign/membership/creating tier/Publish Button.png"/>
     </Step>
