--- a/creating-campaign/membership/gating.mdx
+++ b/creating-campaign/membership/gating.mdx
@@ -14,7 +14,7 @@ Membership eligibility can be allocated by ownership of certain NFT collections 
             Navigate to the "Advance" section for the membership tier to be gated and enable "Gated by NFT."
             <img src="/images/creating-campaign/membership/gating/NFT Gate Toggle.png"/>
         </Step>
-        <Step title="Select NFT Collection to Gate By">
+        <Step title="Select NFT Collection to gate By">
             If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
             <img src="/images/creating-campaign/membership/gating/Your Collection Toggle.png"/>
             <Accordion title="Your Collection">
@@ -47,39 +47,45 @@ Membership eligibility can be allocated by ownership of certain NFT collections 
             Navigate to the "Advance" section for the membership type to be gated and enable "Gated by Email/Wallet."
             <img src="/images/creating-campaign/membership/gating/Email or Wallet Toggle.png"/>
         </Step>
-        <Step title="Choose a Whitelisting Method">
+        <Step title="Choose a whitelisting method">
+            <img src="/images/creating-campaign/membership/gating/select gate method.png"/>
             Select CSV if there are a large number of people that you will be gating this membership type to, and manual for a smaller quantity.
             <Tip>
-                You can always add additional addresses for gating later using either method.
-            </Tip>
-            <img src="/images/creating-campaign/membership/gating/CSV Gate.png"/>
+                You can always gate additional addresses later using either method.
+            </Tip>            
             <Accordion title="CSV (bulk import)">
                 <Steps>
+                    <Step title="Select the 'Upload CSV' method">
+                        <img src="/images/creating-campaign/membership/gating/CSV Gate.png"/>
+                    </Step>
                     <Step title="Download the CSV template">
                         <img src="/images/creating-campaign/membership/gating/Download CSV Template.png"/>
                     </Step>
-                    <Step title="Add Addresses to the CSV Template">
+                    <Step title="Add addresses to the CSV template">
                         Open the template in a spreadsheet editor. Following the template format, input the target email and wallet addresses. You can mix email and wallet addresses concurrently.
                     </Step>
                     <Step title="Upload the CSV">
                         Upload the edited CSV file and save.
                         <img src="/images/creating-campaign/membership/gating/Whitelist Upload.png"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         Return to the Tickets page, locate the gated membership type, and click the number in the "Gated by" column to confirm the addresses.
                         <img src="/images/creating-campaign/membership/gating/Whitelist Confirmation 1.png"/>
                         <img src="/images/creating-campaign/membership/gating/Whitelist Confirmation 2.png"/>
                     </Step>
                 </Steps>
             </Accordion>
-            <img src="/images/creating-campaign/membership/gating/Manual Gate.png"/>
+            
             <Accordion title="Manual">
                 <Steps>
+                    <Step title="Select the 'Manual' method">
+                        <img src="/images/creating-campaign/membership/gating/Manual Gate.png"/>
+                    </Step>
                     <Step title="Click 'Add Whitelist' and input an email/wallet address">
                         Repeat as appropriate for additional addresses and save when complete.
                         <img src="/images/creating-campaign/membership/gating/Manual Flow.gif"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         Return to the Tickets page, locate the gated membership type, and click the number in the "Gated by" column to confirm the addresses.
                         <img src="/images/creating-campaign/membership/gating/Whitelist Confirmation 1.png"/>
                         <img src="/images/creating-campaign/membership/gating/Whitelist Confirmation 2.png"/>
