--- a/creating-campaign/ticketing/inviteonly.mdx
+++ b/creating-campaign/ticketing/inviteonly.mdx
@@ -10,7 +10,7 @@ Tickets can be locked so that only users who hold a specified promo code can pur
         In the target ticket type's edit panel, enable "Invite Only" under "Advanced Options."
             <img src="/images/creating-campaign/ticketing/inviteonly/invite only toggle.png"/>
     </Step>
-    <Step title="Create Code">
+    <Step title="Create code">
         <Info>
             For detailed instructions on how to create a promo code, please refer to our [tutorial here](/distribution/discountpromocode). Both manually and bulk generated codes can be created for invite-only tickets.
         </Info>
