--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -11,7 +11,7 @@ Once you have created a corresponding event, you are now ready to create and iss
   <Step title="Click 'Add Ticket'">
     <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
   </Step>
-  <Step title="Add Ticket Name/Tier">
+  <Step title="Add ticket name/tier">
     Enter the name or category (GA, VIP, Concession, etc) for this ticket type. Additional ticket types can always be added later.
     <img src="/images/creating-campaign/ticketing/creating tickets/Tix Name Field.png"/>
     <Warning>
@@ -23,7 +23,7 @@ Once you have created a corresponding event, you are now ready to create and iss
         <img src="/images/creating-campaign/ticketing/creating tickets/Tix Type Location.png"/>
     </Frame>
   </Step>
-  <Step title="Add Ticket Image and Description">
+  <Step title="Add ticket image and description">
     Upload an image and a brief description for this ticket type.
     <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Img and Desc.png"/>
     <Warning>
@@ -48,7 +48,7 @@ Once you have created a corresponding event, you are now ready to create and iss
         </Tab>
     </Tabs>
   </Step>
-  <Step title="Specify Ticket Price and Sales Period">
+  <Step title="Specify ticket price and sales period">
     Enter the desired price for this ticket type, as well as when sales of this ticket type will begin and end.
     <img src="/images/creating-campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
     <Tip>
@@ -58,7 +58,7 @@ Once you have created a corresponding event, you are now ready to create and iss
         To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
     </Tip>
   </Step>
-  <Step title="Hidden Tickets, Gating, Limited Quantities, Invite Only, etc (Optional)">
+  <Step title="Hidden tickets, gated tickets, limited quantities, invite only tickets, etc (Optional)">
     <Accordion title="Advanced Options">
       The advanced options menu allows you to specify the number of available tickets of this type, the maximum number of tickets
       of this type purchasable in a transaction, gating settings via NFT/email/wallet, whether this ticket type should be hidden
@@ -97,7 +97,7 @@ Once you have created a corresponding event, you are now ready to create and iss
       When you are ready, click "Save" to close the ticket details window, then click "Next."
     </Accordion>
   </Step>
-  <Step title="Add Questions (Optional)">
+  <Step title="Add questions (Optional)">
     <Accordion title="Adding Questions">
       <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
       If applicable, add questions to collect information from users who are purchasing tickets. These questions 
@@ -107,7 +107,7 @@ Once you have created a corresponding event, you are now ready to create and iss
       <img src="/images/creating-campaign/ticketing/creating tickets/Reponses.gif"/>
     </Accordion>
   </Step>
-  <Step title="Specify Contract Settings and Payment Options">
+  <Step title="Specify contract settings and payment options">
     Choose a collection name and symbol for **all ticket types associated with your event.** The collection name will be used as the collection title when tickets are listed on marketplaces.
     <img src="/images/creating-campaign/ticketing/creating tickets/Contract Blank.png"/>
     <Warning>
@@ -122,7 +122,7 @@ Once you have created a corresponding event, you are now ready to create and iss
     Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
     <img src="/images/creating-campaign/ticketing/creating tickets/Payment Options.png"/>
   </Step>
-  <Step title="Publish Your Event">
+  <Step title="Publish your event">
     Once you have finalized your event and ticket details, click "Publish" to launch your event.
     <img src="/images/creating-campaign/ticketing/creating tickets/Publish Button Location.png"/>
   </Step>
