--- a/creating-campaign/membership/inviteonly.mdx
+++ b/creating-campaign/membership/inviteonly.mdx
@@ -10,7 +10,7 @@ Membership tiers can be locked so that only users who hold a specified promo cod
         In the target membership type's edit panel, enable "Invite Only" under "Advanced Options."
             <img src="/images/creating-campaign/membership/inviteonly/invite only toggle.png"/>
     </Step>
-    <Step title="Create Code">
+    <Step title="Create code">
         <Info>
             For detailed instructions on how to create a promo code, please refer to our [tutorial here](/distribution/discountpromocode). Both manually and bulk generated codes can be created for invite-only memberships.
         </Info>
