--- a/customer-insights/utm-tracking.mdx
+++ b/customer-insights/utm-tracking.mdx
@@ -1,7 +1,6 @@
 ---
 title: 'UTM Tracking'
-description: 'Gain a detailed understanding of where your campaign participants are 
-joining from.'
+description: 'Understand where your campaign traffic is coming from.'
 ---
 
 Moongate supports UTM tracking. UTM tracking is enabled by appending `?utm_(anything-you-want-to-track)=(anything)` to the back of your campaign's URL. 
