Start user guide

--- a/get-started/welcome.mdx
+++ b/get-started/welcome.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome
-description: 'Welcome to the Moongate Merchant guide'
+description: 'Welcome to the Moongate Merchant guide.'
 ---
 
 <img
