--- a/get-started/the basics.mdx
+++ b/get-started/the basics.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'The Basics - Blockchains and NFTs'
-description: 'A brief explanation of common web3 terms'
+description: 'A brief explanation of common web3 terms.'
 ---
 We've taken great care to abstract away most of the complexities of Web3 on Moongate in order to make things easier to understand. In case you're curious though, we've explained some basic Web3 terms below for your reference. Please feel free to skip this section though – you truly don't need to know much about Web3 in order to get the most out of Moongate.
 <br/>
