--- a/user-guide/the basics/signup-login.mdx
+++ b/user-guide/the basics/signup-login.mdx
@@ -7,15 +7,55 @@ does not currently support in-app browsers.
 <Tabs>
     <Tab title="Email Login">
         <Steps>
-            <Step title="Open the Moongate login/account creation page"></Step>
+            <Step title="Open the Moongate login/account creation page">
                 https://app.moongate.id
-            <Step title=""></Step>
-            <Step title=""></Step>
+            </Step>
+            <Step title="Enter your email address">
+                <img src="/images/user-guide/the-basics/signup-login/email-login.avif"/>
+            </Step>
+            <Step title="Open one-time sign-in link">
+                Check your inbox for an email containing a one-time sign-in link. Click the link to log in.
+                <img src="/images/user-guide/the-basics/signup-login/check-email.avif"/>
+            </Step>
         </Steps>
     </Tab>
     <Tab title="Google Login">
+        <Steps>
+            <Step title="Open the Moongate login/account creation page">
+                https://app.moongate.id
+            </Step>
+            <Step title="Select 'Google Login'">
+                <img src="images/user-guide/the-basics/signup-login/google-login.avif"/>
+            </Step>
+            <Step title="Select a Google account to sign into Moongate with">
+                You will be brought to the Google account selection page. If you are signed into only one Google account, you will 
+                automatically be signed into Moongate.
+            </Step>
+        </Steps>
     </Tab>
     <Tab title="Existing Wallet">
+        <Steps>
+            <Step title="Open the Moongate login/account creation page">
+                https://app.moongate.id
+            </Step>
+            <Step title="Select 'Connect Wallet'">
+                <img src="/images/user-guide/the-basics/signup-login/connect-wallet.avif"/>
+            </Step>
+            <Step title="Select your wallet provider">
+                <img src="/images/user-guide/the-basics/signup-login/select-wallet-provider.avif"/>
+            </Step>
+            <Step title="Log into and connect your wallet to Moongate">
+                Follow the subsequent login instructions from your wallet provider to connect Moongate to your wallet.
+            </Step>
+            <Step title="Enter your email address">
+                Enter your email address on Moongate when prompted. **You will use this email address to sign into Moongate 
+                in the future** (see the "Email Login" tab on this page).
+                <img src="/images/user-guide/the-basics/signup-login/wallet-flow-email.avif"/>
+                <Tip>
+                    To connect your existing wallet to your existing Moongate account, see [Managing Your Wallet](/user-guide/managing-wallet/connecting-wallet).
+                </Tip>
+            </Step>
+        </Steps>
     </Tab>
     <Tab title="Delegate Cash">
     </Tab>
