--- a/user-guide/the basics/your-portal.mdx
+++ b/user-guide/the basics/your-portal.mdx
@@ -10,4 +10,4 @@ To view all of the benefits associated with a ticket or membership pass, click "
 <img src="/user-guide/images/the-basics/your-portal/benefits button.avif"/>
 
 Click "See in Marketplace" or the thumbnail on a ticket/membership pass to view it on OpenSea.
-<img src="/user-guide/images/the-basics/your-portal/pass.avif"/>
+<img src="/user-guide/images/the-basics/your-portal/marketplace button.avif"/>
