--- a/user-guide/the-basics/your-portal.mdx
+++ b/user-guide/the-basics/your-portal.mdx
@@ -6,7 +6,7 @@ The Moongate Portal is your key point of interaction with Moongate. From here, y
 From the "Pass" page, you can view all of your tickets and membership passes. Tickets for past events will still remain visible in this view as they may unlock future benefits.
 <img src="/user-guide/images/the-basics/your-portal/pass.avif"/>
 
-To view all of the benefits associated with a ticket or membership pass, click "Benefits" on the ticket/membership pass in question. For more information on claiming a benefit, see [here](/user-guide/the basics/benefits).
+To view all of the benefits associated with a ticket or membership pass, click "Benefits" on the ticket/membership pass in question. For more information on claiming a benefit, see [here](/user-guide/the-basics/benefits).
 <img src="/user-guide/images/the-basics/your-portal/benefits button.avif"/>
 
 Click "See in Marketplace" or the thumbnail on a ticket/membership pass to view it on OpenSea.
