--- a/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
+++ b/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
@@ -2,7 +2,7 @@
 title: 'Purchasing and Redeeming Tickets/Memberships'
 --
 <Steps>
-    <Step title="Visit the event/membership page">
+    <Step title="Visit the event/membership pagee">
         On the target ticket/membership landing page, click "Get Ticket" or "Get Membership." You will be taken to your cart, 
         where you can select the tickets/membership passes you'll be purchasing.
         <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/landing page.avif"/>
