Connect existing wallet

--- a/user-guide/managing-wallet/connecting-wallet.mdx
+++ b/user-guide/managing-wallet/connecting-wallet.mdx
@@ -1,3 +1,19 @@
 ---
 title: 'Connecting an Existing Wallet'
 ---
+
+<Steps>
+    <Step title="Navigate to the 'Profile' tab">
+        <img src="/user-guide/images/managing-wallet/connecting-wallet/profile button.png"/>
+        https://app.moongate.id/profile
+    </Step>
+    <Step title="Click 'Add Wallet'">
+        <img src="/user-guide/images/managing-wallet/connecting-wallet/add wallet button.avif"/>
+    </Step>
+    <Step title="Select your wallet provider">
+        <img src="/user-guide/images/managing-wallet/connecting-wallet/choose wallet.avif"/>
+    </Step>
+    <Step title="Authorize Moongate to connect to your wallet">
+        Follow the subsequent instructions from your wallet provider to connect Moongate to your wallet.
+    </Step>    
+</Steps>
