--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -1,3 +1,44 @@
 ---
 title: 'Transferring a Ticket/Membership'
 ---
+<Info>
+    This guide is intended for users whose wallets are the non-custodial variety automatically created by Moongate. If you are 
+    using your own wallet to receive tickets/memberships from Moongate, please refer to your wallet provider's documentation for 
+    information on conducting transfers.
+</Info>
+<Warning>
+    **Please note:** Moongate has no administrative control over your wallet and its contents, and as such is unable to facilitate any 
+    transfers on your behalf.
+</Warning>
+<Steps>
+    <Step title="Navigate to the 'Profile' tab">
+        <img src="/user-guide/images/managing-wallet/transferring-nft/profile button.png"/>
+        https://app.moongate.id/profile
+    </Step>
+    <Step title="Access your non-custodial wallet">
+        Click "Manage Assets" to be taken to your non-custodial wallet.
+        <img src="/user-guide/images/managing-wallet/transferring-nft/manage assets button.gif"/>
+    </Step>
+    <Step title="Select the NFT you wish to transfer">
+        You will be redirected to our wallet partner's page where you can manage your assets. Click on the 'NFT' tab to view the 
+        tickets/memberships associated with your account.
+        <img src="/user-guide/images/managing-wallet/transferring-nft/manage assets view.png"/>
+        Select the NFT you wish to transfer and press 'Send.'
+        <img src="/user-guide/images/managing-wallet/transferring-nft/send button.avif"/>
+        <Info>
+            If your asset value = $0, you'll need to top it up with credits to cover the transfer fee. You can do this by clicking "Buy" 
+            and purchasing credits using a credit/debit card, or transferring funds from another wallet. **NOTE:** the minimum credit 
+            purchase amount will likely be higher than the transfer fee.
+            <img src="/user-guide/images/managing-wallet/transferring-nft/view gas credits.png"/>
+        </Info>
+    </Step>
+    <Step title="Enter recipient information">
+        Input the recipient's wallet address.
+        <img src="/user-guide/images/managing-wallet/transferring-nft/recipient address.avif"/>
+    </Step>
+    <Step title="Confirm the transaction">
+        Confirm and sign the transaction. The gas fee will be deducted from your account and the NFT will then be transferred to the 
+        specified address. Please note that the transaction may take some time to process due to blockchain confirmation times.
+        <img src="/user-guide/images/managing-wallet/transferring-nft/confirm transaction.png"/>
+    </Step>    
+</Steps>
