--- a/user-guide/phygital-integration/activate-badge-id.mdx
+++ b/user-guide/phygital-integration/activate-badge-id.mdx
@@ -2,4 +2,6 @@
 title: 'Activate Badge/ID'
 ---
 
+<iframe src="https://www.loom.com/share/7ea11fa683c74106a62ea330f16969b7?sid=254c1f25-9358-4819-bab0-c856f8cad424"></iframe>
+
 <video controls className="w-full aspect-video" src="https://www.loom.com/share/7ea11fa683c74106a62ea330f16969b7?sid=206eff51-21cd-4e8f-ac32-064ef6ace913"></video>
