Yet another test

--- a/user-guide/phygital-integration/activate-badge-id.mdx
+++ b/user-guide/phygital-integration/activate-badge-id.mdx
@@ -2,6 +2,5 @@
 title: 'Activate Badge/ID'
 ---
 
-<div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/7ea11fa683c74106a62ea330f16969b7?sid=71540713-29a1-423b-a1a8-00cc75ed88ef" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+<iframe src="https://www.loom.com/embed/7ea11fa683c74106a62ea330f16969b7?sid=71540713-29a1-423b-a1a8-00cc75ed88ef"></iframe>
 
-<iframe src="https://www.loom.com/embed/7ea11fa683c74106a62ea330f16969b7?sid=71540713-29a1-423b-a1a8-00cc75ed88ef" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
