--- a/user-guide/phygital-integration/activate-badge-id.mdx
+++ b/user-guide/phygital-integration/activate-badge-id.mdx
@@ -4,3 +4,4 @@ title: 'Activate Badge/ID'
 
 <iframe src="https://www.loom.com/embed/7ea11fa683c74106a62ea330f16969b7?sid=71540713-29a1-423b-a1a8-00cc75ed88ef"></iframe>
 
+<iframe src="https://www.loom.com/embed/7ea11fa683c74106a62ea330f16969b7?sid=71540713-29a1-423b-a1a8-00cc75ed88ef" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
