User FAQ complete

--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -6,7 +6,7 @@ title: 'User FAQs'
         No, you don't!
 
         When you create a Moongate account via Google or email, Moongate automatically creates a non-custodial wallet for you. You can 
-        manage this wallet under the "[Profile](app.moongate.id/profile)" page on our user web portal. Web3 users creating their Moongate 
+        manage this wallet under the "[Profile](https://app.moongate.id/profile)" page on our user web portal. Web3 users creating their Moongate 
         account for the first time can link to their existing wallet both during and after the account creation process.
     </Accordion>
     <Accordion title="I don't recognise the wallet address at the checkout page.">
@@ -28,24 +28,47 @@ title: 'User FAQs'
         Additionally, make sure that you are not browsing in Incognito mode.
     </Accordion>
     <Accordion title="I bought a ticket/membership via moongate. Where is my ticket/membership?">
-        Your ticket or membership is stored as an NFT in your blockchain wallet. You can check your NFT at our [user web portal](app.moongate.id).
+        Your ticket or membership is stored as an NFT in your blockchain wallet. You can check your NFT at our [user web portal](https://app.moongate.id).
 
-        The “Pass” section shows all the tickets/memberships you have acquired using the Moongate platform.
-
-        The “Assets” section shows all the NFTs you have in your blockchain wallets that you have connected to the Moongate platform.
+        The “Pass” section shows all the tickets/memberships you have acquired using the Moongate platform.        
     </Accordion>
     <Accordion title="I can't see my NFT ticket/membership at the user portal.">
+        Please ensure that you are logged in with the same account that you used to purchase the NFT tickets. If you continue to experience issues, please 
+        [contact us](mailto:support@moongate.id).
     </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
+        The Moongate Verify mobile application is intended for event hosts – you shouldn't have to use it! As a general user, please instead visit your 
+        user portal and tap 'Check in" to check into your event – more information on that [here](/user-guide/the-basics/user-check-in-guide).
     </Accordion>
     <Accordion title="Can I get a refund on my purchase?">
+        Moongate does not typically support refunds. However, you can try to sell your NFT ticket/membership on the secondary market, or transfer your NFT to 
+        someone else via the blockchain. In exceptional cases Moongate may be able to provide refunds – please refer to the [Refund Policy](/user-guide/refund-policy/refund-policy) for more information.
     </Accordion>
     <Accordion title="Can I transfer my NFTs?">
+        The ability to transfer your NFTs depends on the specific terms of the event or membership. Some tokens are "soulbound," meaning they cannot be transferred. 
+        However, if the token is not soulbound, you are free to transfer your NFTs as you wish.
+
+        If you have logged in via email and your NFT is stored in the non-custodial wallet we created for you, you can follow the steps below to transfer it back to 
+        your own wallet. Please note that if you already have your NFT in your own wallet, you can freely transfer it as usual.
+
+        🕶 [NFT Transfer Guide](/user-guide/managing-wallet/transferring-nft)
     </Accordion>
     <Accordion title="Does my NFT ticket disappear after the event?">
+        Most tickets remain as NFTs in your wallet after the event and may even have future utility. However, it is best practice to check the terms and conditions 
+        of each event just to be sure.
     </Accordion>
     <Accordion title="Why do I only receive the receipt email?">
+        The email address you provided during the billing process is used to receive the receipt.
+        
+        On the other hand, the "ticket confirmation" is sent to the email address you provided for the ticket. Please check both email addresses for all relevant information.
     </Accordion>
     <Accordion title="How can I connect to OpenSea using my Particle Network wallet?">
+        You can follow the instructions via the external link: https://scribehow.com/shared/View_NFT_in_Moongates_wallet_using_Opensea__H2OFnk-iSVSaUXvt29izkg
+
+        Or you can follow these step-by-step videos:
+
+        [Desktop](https://youtu.be/wTDbFTmcwXE)
+
+        [Mobile](https://youtu.be/63A_pSEY-4w)
     </Accordion>
 </AccordionGroup>
