--- a/user-guide/welcome.mdx
+++ b/user-guide/welcome.mdx
@@ -2,7 +2,7 @@
 title: 'Welcome'
 ---
 
-[Moongate](app.moongate.id) is a Web3 ticketing and membership platform that makes it easy to access a world of exclusive experiences 
+[Moongate](https://app.moongate.id) is a Web3 ticketing and membership platform that makes it easy to access a world of exclusive experiences 
 and benefits. Using Moongate, event organizers can issue tickets and memberships as NFTs, enabling them to deliver additional perks and 
 value to event goers and membership holders.
 
