--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -92,7 +92,7 @@ Once you have created a corresponding event, you are now ready to create and iss
           To gate tickets by NFT ownership or Email/Wallet addresses, please refer to this [guide](/creating-campaign/ticketing/gating).
       </Info>
       <Info>
-          To require users to enter a special code to unlock tickets, please refer to this [guide](/creating-campaign/ticketing/inviteonly.mdx).
+          To require users to enter a special code to unlock tickets, please refer to this [guide](/creating-campaign/ticketing/inviteonly).
       </Info>
       When you are ready, click "Save" to close the ticket details window, then click "Next."
     </Accordion>
