--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -41,8 +41,9 @@ title: 'User FAQs'
         user portal and tap 'Check in" to check into your event – more information on that [here](/user-guide/the-basics/user-check-in-guide).
     </Accordion>
     <Accordion title="Can I get a refund on my purchase?">
-        Moongate does not typically support refunds. However, you can try to sell your NFT ticket/membership on the secondary market, or transfer your NFT to 
-        someone else via the blockchain. In exceptional cases Moongate may be able to provide refunds – please refer to the [Refund Policy](/user-guide/refund-policy/refund-policy) for more information.
+        Moongate does not typically support refunds (although refunds may be issued in exceptional cases – please refer to the 
+        [Refund Policy](/user-guide/refund-policy/refund-policy) for more information). However, you can try to sell your NFT ticket/membership on the secondary market, 
+        or [transfer your NFT to someone else](/user-guide/managing-wallet/transferring-nft) via the blockchain.
     </Accordion>
     <Accordion title="Can I transfer my NFTs?">
         The ability to transfer your NFTs depends on the specific terms of the event or membership. Some tokens are "soulbound," meaning they cannot be transferred. 
