--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -1,12 +1,9 @@
 ---
 title: 'Creating Tickets'
 ---
-
-Once you have created a corresponding event, you are now ready to create and issue tickets.
-
 <Steps>
-  <Step title="Click '③ Tickets'">
-    <img src="/images/creating-campaign/ticketing/creating tickets/3 Tix Location.png"/>
+  <Step title="Navigate to your event's overview page and open the '③ Tickets' tab">
+    <img width=541 height=700 src="/images/creating-campaign/ticketing/creating tickets/3 Tix Location.png"/>
   </Step>
   <Step title="Click 'Add Ticket'">
     <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
