--- a/get-started/nft-explainer.mdx
+++ b/get-started/nft-explainer.mdx
@@ -16,6 +16,6 @@ We've taken great care to abstract away most of the complexities of Web3 on Moon
 
 **Token-Gating/Whitelisting:** restricting the ability to own/purchase an NFT to a specific group of users, either via ownership of another specified NFT or other means (email, for instance.)
 
-**Soulbound:** while a regular NFT can be traded between anybody with a crypto wallet, soulbound NFTs cannot be traded.
+**Soulbound:** while a regular NFT can be traded between anybody with a crypto wallet, soulbound NFTs cannot be traded. Soulbound status is declared when an NFT is first created, so an existing NFT cannot swap between soulbound or non-soulbound status.
 
 **Airdrop:** distributing an NFT for free to a specified group of users.
