--- a/user-guide/nft-explainer.mdx
+++ b/user-guide/nft-explainer.mdx
@@ -21,4 +21,4 @@ existing one if you'd like.
 pay a nominal gas fee.
 
 **Soulbound:** while a regular NFT can be traded between anybody with a crypto wallet, soulbound NFTs cannot be traded. Soulbound status is 
-declared when an NFT is first created, so an existing NFT cannot swap between being soulbound or non-soulbound.
+declared when an NFT is first created, so an existing NFT cannot swap between soulbound or non-soulbound status. 
