--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -3,7 +3,7 @@ title: 'Creating Tickets'
 ---
 <Steps>
   <Step title="Navigate to your event's overview page and open the '③ Tickets' tab">
-    <img width=541 height=700 src="/images/creating-campaign/ticketing/creating tickets/3 Tix Location.png"/>
+    <img width="541" height="700" src="/images/creating-campaign/ticketing/creating tickets/3 Tix Location.png"/>
   </Step>
   <Step title="Click 'Add Ticket'">
     <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
