--- a/creating-campaign/membership/gating.mdx
+++ b/creating-campaign/membership/gating.mdx
@@ -5,13 +5,16 @@ description: 'Limit membership tier purchases to a group of specified users'
 
 By gating a membership tier type, vendors can restrict the ability to attain membership to specified people only, allowing vendors to offer exclusive value to users. 
 
-Membership eligibility can be allocated by ownership of certain NFT collections and email/NFT wallet addresses. **Please note that gating is an optional feature and does not need to be enabled should your application not require it.**
+Membership eligibility can be allocated by ownership of certain NFT collections and email/NFT wallet addresses. 
+<Info>
+    Please note that gating is an optional feature and does not need to be enabled should you not require it.
+</Info>
 
 <AccordionGroup>
   <Accordion title="Gating by NFT">
     <Steps>
         <Step title="Enable NFT-gating">
-            Navigate to the "Advance" section for the membership tier to be gated and enable "Gated by NFT."
+            In the target ticket type’s edit panel, enable 'Gated by NFT' under 'Advanced Options'.
             <img src="/images/creating-campaign/membership/gating/NFT Gate Toggle.png"/>
         </Step>
         <Step title="Select NFT Collection to gate By">
@@ -43,8 +46,8 @@ Membership eligibility can be allocated by ownership of certain NFT collections 
   </Accordion>
   <Accordion title="Gating by Email/Wallet (Whitelisting)">
     <Steps>
-        <Step title="Enable Email/Wallet-gating">
-            Navigate to the "Advance" section for the membership type to be gated and enable "Gated by Email/Wallet."
+        <Step title="Enable Email/Wallet-gating">            
+            In the target ticket type’s edit panel, enable 'Gated by Email/Wallet' under 'Advanced Options'.
             <img src="/images/creating-campaign/membership/gating/Email or Wallet Toggle.png"/>
         </Step>
         <Step title="Choose a whitelisting method">
