--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -5,13 +5,16 @@ description: 'Limit ticket access to a group of specified users'
 
 By gating a ticket type, vendors can restrict the ability to purchase it to specified people only, allowing vendors to offer exclusive value to users. 
 
-Ticket purchase eligibility can be allocated by ownership of certain NFT collections and email/NFT wallet addresses. **Please note that gating is an optional feature and does not need to be enabled should your application not require it.**
+Ticket purchase eligibility can be allocated by ownership of certain NFT collections and email/NFT wallet addresses.
+<Info>
+    Please note that gating is an optional feature and does not need to be enabled should you not require it.
+</Info>
 
 <AccordionGroup>
   <Accordion title="Gating by NFT">
     <Steps>
         <Step title="Enable NFT-gating">
-            Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by NFT."
+            In the target ticket type’s edit panel, enable 'Gated by NFT' under 'Advanced Options'.
             <img src="/images/creating-campaign/ticketing/gating/NFT Gate Toggle.png"/>
         </Step>
         <Step title="Select NFT Collection to gate by">
@@ -52,7 +55,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
   <Accordion title="Gating by Email/Wallet (Whitelisting)">
     <Steps>
         <Step title="Enable email/wallet-gating">
-            Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by Email/Wallet."
+            In the target ticket type’s edit panel, enable 'Gated by Email/Wallet' under 'Advanced Options'.            
             <img src="/images/creating-campaign/ticketing/gating/Email or Wallet Toggle.png"/>
         </Step>
         <Step title="Choose a whitelisting method">
