--- a/creating-campaign/ticketing/inviteonly.mdx
+++ b/creating-campaign/ticketing/inviteonly.mdx
@@ -11,9 +11,9 @@ Tickets can be locked so that only users who hold a specified promo code can pur
             <img src="/images/creating-campaign/ticketing/inviteonly/invite only toggle.png"/>
     </Step>
     <Step title="Create promo code">
-        <Info>
-            For detailed instructions on how to create a promo code, please refer to our [tutorial here](/distribution/discountpromocode). Both manually and bulk generated codes can be created for invite-only tickets.
-        </Info>
+        Enter the 'Discount & Codes' tab and then follow our guide to create a [promo code](/distribution/discountpromocode). Both manually and bulk generated codes can be created for invite-only tickets.
+        <img src="/images/creating-campaign/ticketing/inviteonly/disc code tab.png"/>
+        
         Ensure that your code applies to the target ticket type. Click "Add" and then "Update" in the sidebar when complete. The promo code is now activated.
         <img src="/images/creating-campaign/ticketing/inviteonly/creating code.gif"/>
         <Tip>
