--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -2,7 +2,7 @@
 title: 'Implementing Membership Tiers'
 ---
 <Steps>
-    <Step title="Click '③ Tiers'">
+    <Step title="Navigate to your event's overview page and open the '③ Tiers' tab">
         <img src="/images/creating-campaign/membership/creating tier/Tier Button Location.png"/>
     </Step>
     <Step title="Click 'Add Tier'">
